--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
               <a href="./index.html" class="logo">
                 <div class="flex logo">
                   <i class="fa-brands fa-guilded"></i>
-                  <p>Guil'de-Guide</p>
+                  <h1>Guil'de-Guide</h1>
                 </div>
               </a>
                 <div class="info-tab flex">
@@ -65,8 +65,10 @@
    <!--Card container-----------------------------------------------> 
             <div class="card-title">
                 <h1>Why US?</h1>
-                <p>We've crafted unforgettable journeys for thousands of adventurers since day one.
-                     Travel experts? That's us.</p>
+                <p>
+                  We've crafted unforgettable journeys for thousands of adventurers since day one.
+                  Travel experts? That's us.
+                </p>
                 <h2>Here's what you get when you travel with us:</h2>
             </div>
             <div class="container card-container">
@@ -75,7 +77,8 @@
                     <img src="./src/img/travelteam.webp" alt="Dynamic travel team">
                     <div class="card-content">
                         <h3>Dynamic travel team</h3>
-                        <p>Our dynamic travel team is passionate about creating unforgettable journeys. 
+                        <p>
+                          Our dynamic travel team is passionate about creating unforgettable journeys. 
                             With deep expertise, personal care, and a love for exploration, 
                             we craft stress-free, immersive travel experiences tailored just for you!</p>
                         <a href="#">Learn more</a>
@@ -87,9 +90,11 @@
                     <img src="./src/img/stressfree.jpg" alt="Relaxation of the soul">
                     <div class="card-content">
                         <h3>Relaxation of the soul</h3>
-                        <p>Explore new surroundings, embrace diverse cultures, 
+                        <p>
+                          Explore new surroundings, embrace diverse cultures, 
                             and recharge your mind, leaving you refreshed, when you go to some new place, you will
-                             be stress-free, keep your mind on the way and always be inspired!</p>
+                             be stress-free, keep your mind on the way and always be inspired!
+                            </p>
                         <a href="#">Learn more</a>
                     </div>
                 </div>
@@ -119,34 +124,36 @@
   <!--Footer----------------------------------------------->
         <footer>
             <div class=" container footer-content">
-            <div class="footer-section">
-                <h4>Company</h4>
-                <ul>
-                <li><a href="./aboutus.html">About Us</a></li>
-                <li><a href="./contact-us.html">Contact</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Press</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>Support</h4>
-                <ul>
-                <li><a href="#">Help Center</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>Follow Us</h4>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-            </div>
+                <div class="footer-section">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="./aboutus.html">About Us</a></li>
+                        <li><a href="./contact-us.html">Contact</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Press</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-section">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                
+                <div class="footer-section">
+                    <h4>Follow Us</h4>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
             </div>
             <div class="footer-bottom">
-            <p>&copy; 2024 YourCompany | All Rights Reserved</p>
+                <p>&copy; 2024 YourCompany | All Rights Reserved</p>
             </div>
         </footer>        
     </body>
