--- a/contact-us.html
+++ b/contact-us.html
@@ -21,7 +21,7 @@
         <div class="container flex space ">
           <a class="logo flex" href="./index.html">
             <i class="fa-brands fa-guilded"></i>
-            <p>Guil'de-Guide</p>
+            <h1>Guil'de-Guide</h1>
           </a>
           <div class="info-tab flex">
             <a class="">Destination</a>
@@ -75,7 +75,7 @@
           <p>
             Prefer to speak on the phone? Give us a ring so we can help.
           </p>
-          <p>
+          <p> 
             Mon - Sun: 9am to 8pm
           </p>
           <p>
