--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="./index.html" class="logo">
           <div class="flex">
           <i class="fa-brands fa-guilded"></i>
-          <p>Guil'de-Guide</p>
+          <h1>Guil'de-Guide</h1>
         </div> 
       </a>
         <div class="info-tab flex">
@@ -134,11 +134,12 @@
           <h4>Company</h4>
           <ul>
             <li><a href="./aboutus.html">About Us</a></li>
-            <li><a href="./aboutus.html">Contact</a></li>
+            <li><a href="./contact-us.html">Contact</a></li>
             <li><a href="#">Careers</a></li>
             <li><a href="#">Press</a></li>
           </ul>
         </div>
+
         <div class="footer-section">
           <h4>Support</h4>
           <ul>
@@ -148,12 +149,13 @@
             <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
+
         <div class="footer-section">
           <h4>Follow Us</h4>
           <a href="#"><i class="fab fa-facebook"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>          
         </div>
       </div>
       <div class="footer-bottom">
