--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <a class="">Why Guil'de-Guide</a>
           <a class="">Deals</a>
         </div>
-        <div class="info-bars">
-          <i class="fa-solid fa-bars"></i>
+        <div>
+          <a class="info-bars"><i class="fa-solid fa-bars"></i></a>
         </div>
         <nav>
           <ul>
@@ -47,7 +47,31 @@
         </nav>
       </div>
     </header> 
-
+    <div class="menu-section container"> 
+      <ul>
+        <li>
+          <a>Search</a>
+        </li>
+        <li>
+          <a href="./contact-us.html">Contact us</a>
+        </li>
+        <li>
+          <a>Acount</a>
+        </li>
+        <li>
+          <a>Destination</a>
+        </li>
+        <li>
+          <a>Travel Styles</a>
+        </li>
+        <li>
+          <a>Why Guil'de-Guide</a>
+        </li>
+        <li>
+          <a>Deals</a>
+        </li>  
+      </ul>
+    </div>
     <main>
       <section>
         <div class="hero-banner flex center">
@@ -162,5 +186,6 @@
         <p>&copy; 2024 YourCompany | All Rights Reserved</p>
       </div>
     </footer>
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
