--- a/contact-us.html
+++ b/contact-us.html
@@ -29,26 +29,53 @@
             <a class="">Why Guil'de-Guide</a>
             <a class="">Deals</a>
           </div>
-          <div class="info-bars">
-            <i class="fa-solid fa-bars header-con"></i>
+          <div>
+            <a class="info-bars"><i class="fa-solid fa-bars header-con"></i></a>
           </div>
           <nav>
             <ul>
               <li>
                 <a href="./contact.html">
-                  <i class="fa-solid fa-magnifying-glass header-con""></i>
+                  <i class="fa-solid fa-magnifying-glass header-con"></i>
                 </a>
               </li>
               <li>
-                <a><i class="fa-solid fa-phone header-con""></i></a>
+                <a><i class="fa-solid fa-phone header-con"></i></a>
               </li>
               <li>
-                <a><i class="fa-solid fa-user header-con""></i></a>
+                <a><i class="fa-solid fa-user header-con"></i></a>
               </li>
             </ul>
           </nav>
         </div>
       </header>
+
+      <div class="menu-section container"> 
+        <ul>
+          <li>
+            <a>Search</a>
+          </li>
+          <li>
+            <a href="./contact-us.html">Contact us</a>
+          </li>
+          <li>
+            <a>Acount</a>
+          </li>
+          <li>
+            <a>Destination</a>
+          </li>
+          <li>
+            <a>Travel Styles</a>
+          </li>
+          <li>
+            <a>Why Guil'de-Guide</a>
+          </li>
+          <li>
+            <a>Deals</a>
+          </li>  
+        </ul>
+      </div>
+
       <div class="hero-banner-main container grid">
         <div>
           <p class="p1">Contact Us</p>
@@ -206,5 +233,6 @@
         <p>&copy; 2024 YourCompany | All Rights Reserved</p>
       </div>
     </footer>
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
