--- a/aboutus.html
+++ b/aboutus.html
@@ -31,9 +31,9 @@
                   <a class="">Deals</a>
                 </div>
 
-                <div class="info-bars">
-                    <i class="fa-solid fa-bars"></i>
-                  </div>
+                <div>
+                    <a class="info-bars"><i class="fa-solid fa-bars"></i></a>
+                </div>
                   
                 <nav>
                   <ul>
@@ -50,6 +50,32 @@
                 </nav>
               </div>
         </header>
+
+        <div class="menu-section container"> 
+          <ul>
+            <li>
+              <a>Search</a>
+            </li>
+            <li>
+              <a href="./contact-us.html">Contact us</a>
+            </li>
+            <li>
+              <a>Acount</a>
+            </li>
+            <li>
+              <a>Destination</a>
+            </li>
+            <li>
+              <a>Travel Styles</a>
+            </li>
+            <li>
+              <a>Why Guil'de-Guide</a>
+            </li>
+            <li>
+              <a>Deals</a>
+            </li>  
+          </ul>
+        </div>
 
   <!--main----------------------------------------------->
         <main>         
@@ -155,6 +181,7 @@
             <div class="footer-bottom">
                 <p>&copy; 2024 YourCompany | All Rights Reserved</p>
             </div>
-        </footer>        
+        </footer>       
+        <script src="./src/js/index.js"></script> 
     </body>
 </html>
